Add basic logic to recognize correctness and load next question

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,18 @@
 nav a img {
     vertical-align: -90%;
 }
+
+@-webkit-keyframes fadeOut {
+    from { opacity: 1; }
+      to { opacity: 0; }
+}
+@keyframes fadeOut {
+    from { opacity: 1; }
+      to { opacity: 0; }
+}
+
+.hidden {
+    display: block;
+    -webkit-animation: fadeOut 1s;
+    animation: fadeOut 1s;
+}
