--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,71 @@
 nav a img {
-    vertical-align: -90%;
+	vertical-align: -90%;
 }
 
-@-webkit-keyframes fadeOut {
-    from { opacity: 1; }
-      to { opacity: 0; }
-}
-@keyframes fadeOut {
-    from { opacity: 1; }
-      to { opacity: 0; }
+.scene {
+	height: 260px;
+    perspective: 600px;
+    width: 50%;
 }
 
-.hidden {
-    display: block;
-    -webkit-animation: fadeOut 1s;
-    animation: fadeOut 1s;
+.card {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	transition: transform 1s;
+	transform-style: preserve-3d;
+}
+
+.card__face {
+    align-items: center;
+    backface-visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+}
+
+.card__face--front {
+	background: whitesmoke;
+}
+
+.card__face--back {
+	background: whitesmoke;
+	transform: rotateY(180deg);
+}
+
+.card.is-flipped {
+	transform: rotateY(180deg);
+}
+
+.difficulty {
+    bottom: 5px;
+    display: flex;
+	border: 1px solid rgba(0, 0, 0, 0.3);
+	border-radius: 4px;
+    height: 32px;
+    position: absolute;
+}
+
+.difficulty label {
+    align-items: center;
+	display: inline-flex;
+	padding: 8px;
+}
+
+.difficulty label:last-child {
+	border-right-color: transparent;
+}
+
+.difficulty label input {
+	background-color: transparent;
+    color: #ccc;
+    display: none;
+}
+
+.selected {
+	background-color: #00449e;
+	color: #fff;
 }
